--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.idea
+node_modules
+
+
 # Logs
 logs
 *.log
@@ -102,7 +106,7 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
+#.cache
 
 # Docusaurus cache and generated files
 .docusaurus
