--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.3",
+    "inversify": "5.0.5",
     "mongodb": "^4.5.0",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "reflect-metadata": "^0.1.13"
   },
   "scripts": {
     "dev": "nodemon --inspect dist/index.js",
